increase z-index of next turn button to avoid it being masked

--- a/app/scripts/src/less/ui/replay/turn-log.less
+++ b/app/scripts/src/less/ui/replay/turn-log.less
@@ -4,7 +4,7 @@
 	top: 0;
 	right: -416px;
 	height: 750px;
-	z-index: 2;
+	z-index: 25;
 	padding: 15px;
 
 	.turn {
